; ModuleID = '/home/carl/AnghaBench/radare2/libr/asm/arch/z80/extr_z80asm.c_rd_r.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/asm/arch/z80/extr_z80asm.c_rd_r.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [4 x i8] c"ixl\00", align 1
@.str.1 = private unnamed_addr constant [4 x i8] c"ixh\00", align 1
@.str.2 = private unnamed_addr constant [4 x i8] c"iyl\00", align 1
@.str.3 = private unnamed_addr constant [4 x i8] c"iyh\00", align 1
@.str.4 = private unnamed_addr constant [2 x i8] c"b\00", align 1
@.str.5 = private unnamed_addr constant [2 x i8] c"c\00", align 1
@.str.6 = private unnamed_addr constant [2 x i8] c"d\00", align 1
@.str.7 = private unnamed_addr constant [2 x i8] c"e\00", align 1
@.str.8 = private unnamed_addr constant [2 x i8] c"h\00", align 1
@.str.9 = private unnamed_addr constant [2 x i8] c"l\00", align 1
@.str.10 = private unnamed_addr constant [7 x i8] c"( hl )\00", align 1
@.str.11 = private unnamed_addr constant [2 x i8] c"a\00", align 1
@.str.12 = private unnamed_addr constant [8 x i8] c"( ix +)\00", align 1
@.str.13 = private unnamed_addr constant [8 x i8] c"( iy +)\00", align 1
@.str.14 = private unnamed_addr constant [2 x i8] c"*\00", align 1
@__const.rd_r.list = private unnamed_addr constant [16 x i8*] [i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.2, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.3, i32 0, i32 0), i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.4, i32 0, i32 0), i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.5, i32 0, i32 0), i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.6, i32 0, i32 0), i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.7, i32 0, i32 0), i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.8, i32 0, i32 0), i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.9, i32 0, i32 0), i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.10, i32 0, i32 0), i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.11, i32 0, i32 0), i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.12, i32 0, i32 0), i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.13, i32 0, i32 0), i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.14, i32 0, i32 0), i8* null], align 16
@readbyte = common dso_local global i8* null, align 8
@writebyte = common dso_local global i32 0, align 4
@indexed = common dso_local global i32 0, align 4
@indexjmp = common dso_local global i8* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8**)* @rd_r to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rd_r(i8** %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8**, align 8
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca [16 x i8*], align 16
  store i8** %0, i8*** %3, align 8
  %7 = bitcast [16 x i8*]* %6 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 16 %7, i8* align 16 bitcast ([16 x i8*]* @__const.rd_r.list to i8*), i64 128, i1 false)
  %8 = load i8**, i8*** %3, align 8
  %9 = getelementptr inbounds [16 x i8*], [16 x i8*]* %6, i64 0, i64 0
  %10 = call i32 @indx(i8** %8, i8** %9, i32 0, i8** %5)
  store i32 %10, i32* %4, align 4
  %11 = load i32, i32* %4, align 4
  %12 = icmp eq i32 %11, 15
  br i1 %12, label %13, label %15

13:                                               ; preds = %1
  %14 = load i8*, i8** %5, align 8
  store i8* %14, i8** @readbyte, align 8
  store i32 1, i32* @writebyte, align 4
  store i32 7, i32* %2, align 4
  br label %40

15:                                               ; preds = %1
  %16 = load i32, i32* %4, align 4
  %17 = icmp sle i32 %16, 4
  br i1 %17, label %18, label %27

18:                                               ; preds = %15
  %19 = load i32, i32* %4, align 4
  %20 = icmp sgt i32 %19, 2
  %21 = zext i1 %20 to i32
  %22 = mul nsw i32 32, %21
  %23 = add nsw i32 221, %22
  store i32 %23, i32* @indexed, align 4
  %24 = load i32, i32* %4, align 4
  %25 = and i32 %24, 1
  %26 = sub nsw i32 6, %25
  store i32 %26, i32* %2, align 4
  br label %40

27:                                               ; preds = %15
  %28 = load i32, i32* %4, align 4
  %29 = sub nsw i32 %28, 4
  store i32 %29, i32* %4, align 4
  %30 = load i32, i32* %4, align 4
  %31 = icmp slt i32 %30, 9
  br i1 %31, label %32, label %34

32:                                               ; preds = %27
  %33 = load i32, i32* %4, align 4
  store i32 %33, i32* %2, align 4
  br label %40

34:                                               ; preds = %27
  %35 = load i32, i32* %4, align 4
  %36 = sub nsw i32 %35, 9
  %37 = mul nsw i32 32, %36
  %38 = add nsw i32 221, %37
  store i32 %38, i32* @indexed, align 4
  %39 = load i8*, i8** %5, align 8
  store i8* %39, i8** @indexjmp, align 8
  store i32 7, i32* %2, align 4
  br label %40

40:                                               ; preds = %34, %32, %18, %13
  %41 = load i32, i32* %2, align 4
  ret i32 %41
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @indx(i8**, i8**, i32, i8**) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
